feat: adds check pad|check pad item
